PTS/DTS support; --repeat-headers option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 project (turing)
-add_subdirectory (boost)
+if (USE_SYSTEM_BOOST)
+else()
+    add_subdirectory (boost)
+endif()
 add_subdirectory (havoc)
 add_subdirectory (turing)
