--- a/turing/CMakeLists.txt
+++ b/turing/CMakeLists.txt
@@ -114,6 +114,7 @@ add_library(turing
     SCDetection.cpp
     smoke.cpp 
     TaskDeblock.cpp 
+	TaskSao.cpp 
     Aps.h
     Binarization.h
     BitField.h
@@ -130,6 +131,7 @@ add_library(turing
     DecodedPicture.h
     Dsp.h
     Encoder.h
+	EncSao.h
     EstimateRate.h
     EstimateIntraComplexity.h
     FixedPoint.h
@@ -187,6 +189,7 @@ add_library(turing
     SyntaxRbsp.hpp
     SyntaxSei.h
     TaskDeblock.h
+	TaskSao.h
     TaskEncodeInput.h
     TaskEncodeOutput.h
     TaskEncodeSubstream.h
