Renamed output executables. Resolves #8
- Renamed turing-exe to turing
- Renamed havoc-exe to havoc
- Updated Travis CI config to use the new filenames

Note that the havoc changes should probably be pushed to te upstream project.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
   - cd bitstreams
   - git checkout b19d683
   - cd ..
-  - ./turing/turing-exe signature ../test/
-  - ./turing/turing-exe testdecode
+  - ./turing/turing signature ../test/
+  - ./turing/turing testdecode
