cmake: don't link librt on macOS

--- a/turing/CMakeLists.txt
+++ b/turing/CMakeLists.txt
@@ -46,7 +46,9 @@ if (CMAKE_COMPILER_IS_GNUCC)
     set(GCC_COMPILE_FLAGS "-fno-operator-names -std=c++0x -pthread -O3 -std=c++1y -mlzcnt")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
     set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}")
-    set(LINK_LIBRARIES ${LINK_LIBRARIES} rt)
+    if (NOT APPLE)
+        set(LINK_LIBRARIES ${LINK_LIBRARIES} rt)
+    endif()
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-operator-names")
 endif()
