Modified behaviour of CMake and pkgconfig

--- a/turing/CMakeLists.txt
+++ b/turing/CMakeLists.txt
@@ -215,6 +215,11 @@ if(UNIX)
 	if(PKG_CONFIG_FOUND)
 		configure_file("libturing.pc.in" "libturing.pc" @ONLY)
 		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/libturing.pc" DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig")
+		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/../boost/libs/chrono/src/libboost_chrono.a" DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/boost")
+		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/../boost/libs/filesystem/src/libboost_filesystem.a" DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/boost")
+		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/../boost/libs/program_options/src/libboost_program_options.a" DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/boost")
+		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/../boost/libs/system/src/libboost_system.a" DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/boost")
+		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/../boost/libs/timer/src/libboost_timer.a" DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/boost")
 	endif()
 endif()
 
