--- a/havoc/CMakeLists.txt
+++ b/havoc/CMakeLists.txt
@@ -22,7 +22,14 @@ if (CMAKE_COMPILER_IS_GNUCC)
 	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fno-strict-aliasing -DNDEBUG ")
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DVALGRIND_FRIENDLY")
 	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}")
-endif (CMAKE_COMPILER_IS_GNUCC	)
+endif (CMAKE_COMPILER_IS_GNUCC)
+
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(GCC_COMPILE_FLAGS "-fno-operator-names -pthread -std=c++1y")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fno-strict-aliasing -DNDEBUG ")
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DVALGRIND_FRIENDLY")
+	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}")
+endif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 
 add_library (havoc
 	diff.h
