--- a/turing/libturing.pc.in
+++ b/turing/libturing.pc.in
@@ -6,6 +6,6 @@ includedir=${prefix}/include
 Name: @CMAKE_PROJECT_NAME@
 Description: Turing codec library
 Version: @GIT_DESCRIBE@
-Libs: -L${libdir}  -lturing -lhavoc
+Libs: -L${libdir}  -lturing -lhavoc -lstdc++ -L@CMAKE_INSTALL_PREFIX@/lib/boost -lboost_program_options -lboost_timer -lboost_system -lboost_filesystem -lboost_chrono
 Libs.private: -lstdc++ -L@CMAKE_INSTALL_PREFIX@/lib/boost -lboost_program_options -lboost_timer -lboost_system -lboost_filesystem -lboost_chrono
 Cflags: -I${includedir}
